--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>Home - Innocent</title>
+      <title>Innocent Kazembe | Portfolio</title>
+      <meta name="description" content="Innocent Kazembe - Full Stack Developer & Computer Science Graduate Portfolio" />
+
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
